# fast_api

./: README.md  pyproject.toml  requirements.txt
app/: main.py  models.py  router.py  settings.py
tests/: test_app_routes.py
